1.12 initial commit
Should be better this time. I hope I shouldn't describe every change now again?